// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LastName /> render() should render correctly 1`] = `
<div>
  <WithStyles(EditableTextForm)
    label="Last Name"
    name="lastName"
    onSubmit={[Function]}
    placeholder="Click to specify last name"
    value=""
  />
</div>
`;

exports[`<LastName /> render() should render correctly if variant is text field 1`] = `
<div>
  <FormsyInterceptor
    label="Last Name"
    name="lastName"
    onInterceptValue={[Function]}
    value=""
  />
</div>
`;

exports[`<LastName /> render() should render correctly if variant is text only 1`] = `
<div>
  <span />
</div>
`;
